--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            <h1>Site XPTO</h1>
+            <h1>Site XPTO ROOT</h1>
         </header>
         <article>
             <h2>Artigo 01 do Site XPTO</h2>
